<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:card_view="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:padding="5dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="@dimen/radius"
        card_view:cardElevation="@dimen/elevation">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin">

                <ImageView
                    android:id="@+id/picImageView"
                    android:layout_width="200dp"
                    android:layout_height="275dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/scivetta"
                    tools:ignore="ContentDescription"/>

                <TextView
                    android:id="@+id/descTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_toRightOf="@id/picImageView"
                    android:ellipsize="marquee"
                    android:maxHeight="275dp"
                    android:paddingLeft="10dp"
                    tools:text="Explanation about the speaker."/>

                <TextView
                    android:id="@+id/availableTimeTextView"
                    style="@style/AppTheme.TitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/picImageView"
                    android:layout_marginTop="@dimen/margin"
                    android:text="@string/title_available_time"/>

                <LinearLayout
                    android:id="@+id/timeTenGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/availableTimeTextView"
                    android:layout_marginTop="@dimen/margin"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/ten0Button"
                        style="@style/AppTheme.TimeButton"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/ten0"/>

                    <Button
                        android:id="@+id/ten1Button"
                        style="@style/AppTheme.TimeButton"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/ten1"/>

                    <Button
                        android:id="@+id/ten2Button"
                        style="@style/AppTheme.TimeButton"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/ten2"/>

                    <Button
                        android:id="@+id/ten3Button"
                        style="@style/AppTheme.TimeButton"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:text="@string/ten3"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/subscriptionTextView"
                    style="@style/AppTheme.TitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/timeTenGroup"
                    android:layout_marginTop="@dimen/margin"
                    android:text="@string/title_subscription"/>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/nameTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/subscriptionTextView"
                    android:layout_marginTop="@dimen/margin">

                    <EditText
                        android:id="@+id/nameEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/emailTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/nameTextInputLayout"
                    android:layout_marginTop="@dimen/margin">

                    <EditText
                        android:id="@+id/emailEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/subjectTextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/emailTextInputLayout"
                    android:layout_marginTop="@dimen/margin">

                    <EditText
                        android:id="@+id/subjectEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|left"
                        android:hint="@string/subject"
                        android:inputType="textMultiLine"
                        android:lines="8"
                        android:maxLines="10"
                        android:minLines="6"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/submit"
                    style="@style/AppTheme.Button"
                    android:layout_width="match_parent"
                    android:layout_below="@+id/subjectTextInputLayout"
                    android:layout_marginTop="20dp"
                    android:text="@string/button_subscribe"/>
            </RelativeLayout>
        </ScrollView>
    </android.support.v7.widget.CardView>
</FrameLayout>